# SW8E-MEB-Software

./: .ccsproject  .cproject  .editorconfig  .gitignore  .project  CMakeLists.txt  CMakePresets.json  LEDs.h  README.md  SW8E-MEB-Software.ino  WARNING.txt  aht10.cpp  aht10.hpp  comm.cpp  comm.hpp  conversions.cpp  main.c  mpu6050.cpp  mpu6050.hpp  msp430-gcc-toolchain.cmake  pinmap.h  send_sensor_data.c  test_comm.py
.launches/: SW8E-MEB-Software.launch
Debug/: SW8E-MEB-Software_linkInfo.xml  ccsObjs.opt  makefile  subdir_vars.mk
Debug/src/: subdir_rules.mk  subdir_vars.mk
Debug/src_energia/: subdir_rules.mk  subdir_vars.mk
MEB_Arduino/: Main.ino  pinmap.h
MEB_Arduino/Main/: Main.ino  pinmap.h
docs/: comms_flowchart.d2  energia_flowchart.d2  leds_flowchart.d2
include/: aht10.h  clocks.h  gpio.h  gpio_devices.h  leds.h  pc_comms.h  ports.h  sw8_helpers.h  ws2812.h
scripts/: comm.py  msb_command.py  read_sys_voltage.py  readraw.py  template_script.py
serial_comms/: RosMeb.py  meb.py
src/: aht10.c  clocks.c  gpio.c  gpio_devices.c  main.c  pc_comms.c  ports.c  sw8_helpers.h  ws2812.c
src_energia/: LEDs.cpp  LEDs.h  SW8E-MEB-Software.cpp  aht10.cpp  conversions.hpp  expboard.cpp  expboard.hpp
util/: msp430-elf-gdb.sh  mspdebug.sh  mspdebug_flash_gdb_helper.sh
